--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.4",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.4.0",
-    "mongoose": "^5.3.7"
+    "mongoose": "^5.3.7",
+    "nodemailer": "^4.7.0"
   }
 }
